# odbc

./: .envrc  .gitignore  .travis.yml  CHANGELOG  Dockerfile  LICENSE  README.md  appveyor.yml  default.nix  odbc.cabal  shell.nix  stack.yaml  upload-haddocks.sh
.github/workflows/: workflow.yml
app/: Main.hs  Params.hs
bench/: Space.hs
cbits/: ms.h  msodbcsql.h  odbc.c  odbc.h
doc/: highlight.pack.js  init.js  patch.sh  style.css
src/: ODBC.hs
src/Database/: ODBC.hs
src/Database/ODBC/: Conversion.hs  Internal.hs  SQLServer.hs  TH.hs
test/: Main.hs  docker-build  test-ghcs
