name:                odbc
synopsis:            Haskell binding to the ODBC API
description:         Haskell binding to the ODBC API.
version:             0.0.1
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  ghc-options:       -Wall -O2
  cc-options:        -Wall -Wconversion
  exposed-modules:   Database.ODBC
  default-language:  Haskell2010
  if os(mingw32) || os(win32)
    extra-libraries: odbc32
  else
    extra-libraries: odbc
  c-sources:         cbits/odbc.c
  include-dirs:      cbits
  build-depends:
    base >= 4.7 && < 5,
    deepseq,
    async,
    bytestring,
    text,
    unliftio-core

executable odbc
  hs-source-dirs:    app
  main-is:           Main.hs
  ghc-options:       -Wall -O2 -threaded
  default-language:  Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    odbc,
    bytestring,
    text,
    optparse-applicative

test-suite test
  default-language:  Haskell2010
  type: exitcode-stdio-1.0
  build-depends: base, text, odbc, hspec, QuickCheck, bytestring
  ghc-options: -threaded
  hs-source-dirs: test
  main-is: Main.hs
