name:                odbc
synopsis:            Haskell binding to the ODBC API, aimed at SQL Server driver
description: Haskell binding to the ODBC API. This has been tested
             against the Microsoft SQL Server ODBC drivers. Its test
             suite runs on OS X, Windows and Linux.
copyright: FP Complete 2018
maintainer: chrisdone@fpcomplete.com
version:             0.2.6
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md CHANGELOG doc/style.css doc/patch.sh doc/init.js doc/highlight.pack.js
cabal-version:       >=1.10
homepage:            https://github.com/fpco/odbc

library
  hs-source-dirs:    src
  ghc-options:       -Wall -O2
  cc-options:        -Wall -Wconversion
  exposed-modules:
   Database.ODBC.Internal
   Database.ODBC.SQLServer
   Database.ODBC.Conversion
   Database.ODBC.TH
  default-language:  Haskell2010
  if os(mingw32) || os(win32)
    extra-libraries: odbc32
  else
    extra-libraries: odbc
  c-sources:         cbits/odbc.c
  include-dirs:      cbits
  build-depends:
    base >= 4.9.0.0 && < 5,
    deepseq,
    async,
    bytestring,
    text,
    unliftio-core,
    formatting >= 6.3.1,
    containers,
    time,
    semigroups,
    transformers,
    template-haskell,
    parsec,
    hashable,
    attoparsec

executable odbc
  hs-source-dirs:    app
  main-is:           Main.hs
  ghc-options:       -Wall -O2 -threaded
  default-language:  Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    odbc,
    bytestring,
    text,
    optparse-applicative

test-suite test
  default-language:  Haskell2010
  type: exitcode-stdio-1.0
  build-depends: base, text, odbc, hspec, QuickCheck, bytestring, time, parsec
  ghc-options: -threaded
  hs-source-dirs: test
  main-is: Main.hs

benchmark space
  default-language:  Haskell2010
  type: exitcode-stdio-1.0
  build-depends: base, odbc, weigh, text, async
  ghc-options: -threaded -O2
  hs-source-dirs: bench
  main-is: Space.hs
